# local-talking-llm

./: .gitignore  Makefile  README.md  app.py  beep.py  pyproject.toml  tools.yaml  tts.py  tts_server.py  vad.py  wake_word.py  web_ui.py
.claude/: settings.local.json
src/: assistant.py  cli.py  tts_server.py  web_ui.py
src/local_talking_llm/: assistant.py  audio.py  cli.py  tts_server.py
src/local_talking_llm/tools/: __init__.py
src/tools/: __init__.py  system_command.py  web_search.py
